src/objects/DNBoptimizer__DnBExternalContactRecord__x.object
<CustomObject>
    <externalDataSource>DNBoptimizer__DnB_Contact</externalDataSource>
    <externalName>DnB_ContactExternalObject</externalName>
    <fields>
        <fullName>DNBoptimizer__BusinessName__c</fullName>
        <description>The single name by which the entity is primarily known or identified.</description>
        <inlineHelpText>The single name by which the entity is primarily known or identified.</inlineHelpText>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__City__c</fullName>
        <description>The name of the city, town, township, village, borough, etc. in which this address is located.</description>
        <inlineHelpText>The name of the city, town, township, village, borough, etc. in which this address is located.</inlineHelpText>
        <label>Primary Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__ContactID__c</fullName>
        <description>An identification number that uniquely defines a D&amp;B contact.</description>
        <inlineHelpText>An identification number that uniquely defines a D&amp;B contact.</inlineHelpText>
        <label>D&amp;B Contact ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__ContactPhone__c</fullName>
        <description>A sequence of digits used for voice communication with the entity.  This sequence of digits includes the area code or city code and domestic dialing code.</description>
        <inlineHelpText>A sequence of digits used for voice communication with the entity.  This sequence of digits includes the area code or city code and domestic dialing code.</inlineHelpText>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__CountryCode__c</fullName>
        <description>The two-letter country/region code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country/region in which the entity is located.</description>
        <inlineHelpText>The two-letter country code, defined by the International Organization for Standardization (ISO) ISO 3166-1 scheme, identifying the country in which the entity is located.</inlineHelpText>
        <label>Primary Address Country/Region Code ISO2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DUNSNumber__c</fullName>
        <description>The Dun &amp; Bradstreet D-U-N-S Number with which the contact is associated. The D-U-N-S Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <inlineHelpText>The Dun &amp; Bradstreet D-U-N-S Number with which the contact is associated. The D-U-N-S Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__EmailDeliverabilityScore__c</fullName>
        <description>The predicted probability that a contact can be reached by the email listed for the contact, at the time of the most recent email verification.</description>
        <inlineHelpText>The predicted probability that a contact can be reached by the email listed for the contact, at the time of the most recent email verification.</inlineHelpText>
        <label>Email Deliverability Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__Email__c</fullName>
        <description>The email address of the contact.</description>
        <inlineHelpText>The email address of the contact.</inlineHelpText>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__FirstName__c</fullName>
        <description>The given name of the individual.</description>
        <inlineHelpText>The given name of the individual.</inlineHelpText>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__JobTitle__c</fullName>
        <description>The job held by the entity.</description>
        <inlineHelpText>The job held by the entity.</inlineHelpText>
        <label>Job Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__LastName__c</fullName>
        <description>The family name of the individual.</description>
        <inlineHelpText>The family name of the individual.</inlineHelpText>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__MiddleName__c</fullName>
        <description>The middle name of the individual.</description>
        <inlineHelpText>The middle name of the individual.</inlineHelpText>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NamePrefix__c</fullName>
        <description>The correct form of address for the individual (e.g., Dr., Professor, Lord).</description>
        <inlineHelpText>The correct form of address for the individual (e.g., Dr., Professor, Lord).</inlineHelpText>
        <label>Prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__NameSuffix__c</fullName>
        <description>The familial or professional suffix to the individual&apos;s name.</description>
        <inlineHelpText>The familial or professional suffix to the individual&apos;s name.</inlineHelpText>
        <label>Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PhoneAccuracyScore__c</fullName>
        <description>The predicted probability (from 0 to 100) that a contact can be reached at least one of their listed phone numbers, at the time of the most recent phone verification. Decays at a rate of 2 points each month.</description>
        <inlineHelpText>The predicted probability (from 0 to 100) that a contact can be reached at least one of their listed phone numbers, at the time of the most recent phone verification. Decays at a rate of 2 points each month.</inlineHelpText>
        <label>Phone Accuracy Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__PostalCode__c</fullName>
        <description>An identifier used by the local country&apos;s postal authority to identify where this address is located.</description>
        <inlineHelpText>An identifier used by the local country&apos;s postal authority to identify where this address is located.</inlineHelpText>
        <label>Primary Address Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Code1__c</fullName>
        <description>The 1987 version of a 4-digit numeric coding system developed by the US Government for the classification of industrial activities to denote the industry in which the entity does most of its business.</description>
        <inlineHelpText>The 1987 version of a 4-digit numeric coding system developed by the US Government for the classification of industrial activities to denote the industry in which the entity does most of its business.</inlineHelpText>
        <label>SIC4 Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__SIC4Desc1__c</fullName>
        <description>The business activity based on the scheme used for the industry code (e.g., &apos;highway and street construction&apos; is the description of industry code 1611 in the U.S. SIC (Standard Industrial Classification) system).</description>
        <inlineHelpText>The business activity based on the scheme used for the industry code (e.g., &apos;highway and street construction&apos; is the description of industry code 1611 in the U.S. SIC (Standard Industrial Classification) system).</inlineHelpText>
        <label>SIC4 Code 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__StateProvinceAbbrev__c</fullName>
        <description>The shortened name of the locally governed area that forms part of a centrally governed nation. For example &apos;NJ&apos; for the US State New Jersey within Country United States.</description>
        <inlineHelpText>The shortened name of the locally governed area that forms part of a centrally governed nation. For example &apos;NJ&apos; for the US State New Jersey within Country United States.</inlineHelpText>
        <label>Primary Address State Province Abbrev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__StateProvince__c</fullName>
        <description>The name of the locally governed area that forms part of a centrally governed nation to identify where this address is located.</description>
        <inlineHelpText>The name of the locally governed area that forms part of a centrally governed nation to identify where this address is located.</inlineHelpText>
        <label>Primary Address State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__baseDataId__c</fullName>
        <description>base data id</description>
        <label>Base Data ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>D&amp;B External Contact Record</label>
    <pluralLabel>D&amp;B External Contact Records</pluralLabel>
</CustomObject>